2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/Decompiler.cs:
	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/DomPropertyNodeBuilder.cs: Worked on
	assembly browser.

2008-11-11  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: removed the
	documentation tab out of the assembly browser.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AssemblyBrowser.addin.xml: Bump MD version.

2008-10-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/Reference.cs:
	* MonoDevelop.AssemblyBrowser/ReferenceNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/ReferenceFolderNodeBuilder.cs: Worked on
	reference loading.

2008-10-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomEventNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomFieldNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/DomPropertyNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/IAssemblyBrowserNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs:
	* gtk-gui/MonoDevelop.AssemblyBrowser.AssemblyBrowserWidget.cs: Worked
	on assembly browser

2008-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/AssemblyBrowserView.cs:
	* MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/DomPropertyNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs: Worked on
	assembly browser.
